# movie_revenue_prediction

./: pyproject.toml  streamlit_test.py
model/: xgb_model3.pkl  xgb_model6.pkl
python_files/: basic_preprocessing.py  cast_transformer.py  cast_transformer2.py  data.py  dataframe_transformer.py  fetch_missing_data.py  genre_transformer.py  preprocessing.py
