[tool.poetry]
name = "data-movie-revenue-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{include = "data_movie_revenue_prediction"}]

[tool.poetry.dependencies]
python = ">=3.8.12,<3.9"
scikit-learn = "1.2.2"
pandas = "^1.5.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
wordcloud = "^1.8.2.2"
xgboost = "^1.7.1"
lightgbm = "^3.3.3"
scipy = "^1.9.3"
requests = "^2.28.1"
streamlit = "^1.15.2"
shap = "^0.41.0"
jupyter = "^1.0.0"
imdbpy = "^2022.7.9"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
